// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<App /> should render loader is showLoader is at true 1`] = `
<div
  className="page"
>
  <Header />
  <Loader />
  <div />
  <style
    jsx={true}
  >
    
          .page {
            min-height: 100vh;
            background-color: #2d3047;
          }
          :global(*) {
            padding: 0;
            margin: 0;
          }

          :global(html) {
            font-size: 100%;
          }
        
  </style>
</div>
`;

exports[`<App /> should render properly 1`] = `
<div
  className="page"
>
  <Header />
  <div />
  <style
    jsx={true}
  >
    
          .page {
            min-height: 100vh;
            background-color: #2d3047;
          }
          :global(*) {
            padding: 0;
            margin: 0;
          }

          :global(html) {
            font-size: 100%;
          }
        
  </style>
</div>
`;
